Added remote user

--- a/ping.yml
+++ b/ping.yml
@@ -1,6 +1,7 @@
   -
     name: Check connectivity to remote hosts
     hosts: all
+    remote_user: ec2-user
     tasks:
         - name: ping check
           ping:
